<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinnerChooseCity"
        android:layout_width="295dp"
        android:layout_height="38dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="1dp"
        android:entries="@array/cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/wind_speed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinnerChooseCity"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/atmospheric_pressure"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/windSpeed"
        app:layout_constraintTop_toBottomOf="@+id/windSpeed" />

    <TextView
        android:id="@+id/select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="72dp"
        android:text="@string/choose_your_city"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/spinnerChooseCity"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>