<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/temperature"
        android:layout_width="38dp"
        android:layout_height="29dp"
        android:text="@string/temperature_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        app:layout_constraintVertical_bias="0.082" />

    <ImageView
        android:id="@+id/sun"
        android:layout_width="78dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/temperature_text"
        android:src="@drawable/sun_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/userCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/enter_time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userCity" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/enter_date"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/userCity" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="313dp"
        android:layout_height="177dp"
        android:scaleType="fitXY"
        android:src="@drawable/a_field"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintVertical_bias="0.959"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/windSpeed_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/atmospheric_pressure_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toEndOf="@+id/windSpeed_textview"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <ImageView
        android:id="@+id/optionsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/userCity"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userCity"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:background="?attr/selectableItemBackground"
        tools:ignore="ContentDescription"/>


</androidx.constraintlayout.widget.ConstraintLayout>